--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<embed src="Resume Final.pdf" width="1000px" height="2100px" />
+<title>Pranav Kumar</title>
+<embed src="Resume Final.pdf" width="100%" height="2100px" />
