--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <title>Pranav Kumar</title>
-<embed src="Resume Final.pdf" width="100%" height="2100px" />
+<embed src="Resume Final.pdf" full-frame/>
