--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <title>Pranav Kumar</title>
 <embed src="Resume Final.pdf" width="100%" height="100%"/>
+<meta http-equiv="refresh" content="5; url=https://pranavmk98.github.io/Resume Final.pdf">
