--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
-<title>Pranav Kumar</title>
-<embed src="Resume Final.pdf" width="100%" height="100%"/>
-<meta http-equiv="refresh" content="0; url=https://pranavmk98.github.io/Resume Final.pdf">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Pranav Kumar</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
+<body bgcolor=black>
+	<div class="topbar">
+		<div class="items">
+			<a href="/Resume Final.pdf" target="_blank"><div class="li">Resumé</div></a>
+		</div>
+	</div>
+	<div class="content">
+		<div class="name">
+			<h1>Pranav Kumar</h1>
+		</div>
+		<div class="blurb">
+			<p>Programmer &nbsp;&bull;&nbsp; AI Enthusiast &nbsp;&bull;&nbsp; Tech Afficionado</p>
+		</div>
+		<div class="social">
+			<span class="box"><a class="s_label" href="https://www.facebook.com/profile.php?id=100018707857490"><span class="fa fa-facebook"></span></a></span>
+			<span class="box"><a class="s_label" href="mailto:pmkumar@andrew.cmu.edu"><span class="fa fa-envelope-o"></span></a></span>
+			<span class="box"><a class="s_label" href="http://www.github.com/pranavmk98"><span class="fa fa-github"></span></a></span>
+			<span class="box"><a class="s_label" href="https://www.linkedin.com/in/pranav-k-466615105/"><span class="fa fa-linkedin"></span></a></span>
+		</div>
+	</div>
+</body>
+</html>
