--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body bgcolor=black>
 	<div class="topbar">
 		<div class="items">
-			<a href="/Resume Final.pdf" target="_blank"><div class="li">Resumé</div></a>
+			<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li">Resumé</div></a>
 		</div>
 	</div>
 	<div class="content">
