--- a/index.html
+++ b/index.html
@@ -19,24 +19,36 @@
 
 </head>
 <body bgcolor=black>
-	<div class="topbar">
-		<div class="items">
-			<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li">Resumé</div></a>
+	<div class="desktop">
+		<div class="topbar">
+			<div class="items">
+				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li">Resumé</div></a>
+			</div>
+		</div>
+		<div class="content">
+			<div class="name">
+				<h1>Pranav Kumar</h1>
+			</div>
+			<div class="blurb">
+				<p>Programmer &nbsp;&bull;&nbsp; AI Enthusiast &nbsp;&bull;&nbsp; Tech Afficionado</p>
+			</div>
+			<div class="social">
+				<span class="box"><a class="s_label" href="https://www.facebook.com/profile.php?id=100018707857490"><span class="fa fa-facebook"></span></a></span>
+				<span class="box"><a class="s_label" href="mailto:pmkumar@andrew.cmu.edu"><span class="fa fa-envelope-o"></span></a></span>
+				<span class="box"><a class="s_label" href="http://www.github.com/pranavmk98"><span class="fa fa-github"></span></a></span>
+				<span class="box"><a class="s_label" href="https://www.linkedin.com/in/pranav-k-466615105/"><span class="fa fa-linkedin"></span></a></span>
+			</div>
 		</div>
 	</div>
-	<div class="content">
-		<div class="name">
-			<h1>Pranav Kumar</h1>
-		</div>
-		<div class="blurb">
-			<p>Programmer &nbsp;&bull;&nbsp; AI Enthusiast &nbsp;&bull;&nbsp; Tech Afficionado</p>
-		</div>
-		<div class="social">
-			<span class="box"><a class="s_label" href="https://www.facebook.com/profile.php?id=100018707857490"><span class="fa fa-facebook"></span></a></span>
-			<span class="box"><a class="s_label" href="mailto:pmkumar@andrew.cmu.edu"><span class="fa fa-envelope-o"></span></a></span>
-			<span class="box"><a class="s_label" href="http://www.github.com/pranavmk98"><span class="fa fa-github"></span></a></span>
-			<span class="box"><a class="s_label" href="https://www.linkedin.com/in/pranav-k-466615105/"><span class="fa fa-linkedin"></span></a></span>
-		</div>
-	</div>
+	<div class="mobile_device_380px">
+        <!-- content and some markups for mobile -->
+
+        Hello 380
+    </div>
+    <div class="mobile_device_480px">
+        <!-- content and some markups for mobile -->
+
+        Hello 480
+    </div>
 </body>
 </html>
