--- a/index.html
+++ b/index.html
@@ -47,8 +47,30 @@
     </div>
     <div class="mobile_device_480px">
         <!-- content and some markups for mobile -->
-
-        Hello 480
+        <div class="topbar">
+			<div class="items">
+				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li">Resumé</div></a>
+			</div>
+		</div>
+		<div class="content">
+			<div class="name">
+				<h1>Pranav</h1>
+				<h1>Kumar</h1>
+			</div>
+			<div class="blurb">
+				<p> &nbsp;&bull;&nbsp; Programmer &nbsp;&bull;&nbsp; <br/><!-- </p>
+				<p> --> &nbsp;&bull;&nbsp; AI Enthusiast &nbsp;&bull;&nbsp; <br/><!-- </p>
+				<p> --> &nbsp;&bull;&nbsp; Tech Afficionado &nbsp;&bull;&nbsp; </p>
+			</div>
+			<div class="social">
+				<span class="box"><a class="s_label" href="https://www.facebook.com/profile.php?id=100018707857490"><span class="fa fa-facebook"></span></a></span>
+				<span class="box"><a class="s_label" href="mailto:pmkumar@andrew.cmu.edu"><span class="fa fa-envelope-o"></span></a></span>
+			</div>
+			<div class="social">
+				<span class="box"><a class="s_label" href="http://www.github.com/pranavmk98"><span class="fa fa-github"></span></a></span>
+				<span class="box"><a class="s_label" href="https://www.linkedin.com/in/pranav-k-466615105/"><span class="fa fa-linkedin"></span></a></span>
+			</div>
+		</div>
     </div>
 </body>
 </html>
