First try of mobile view

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 		<div class="content">
 			<div class="name">
 				<h1>Pranav</h1>
+			</div>
+			<div class="name">
 				<h1>Kumar</h1>
 			</div>
 			<div class="blurb">
