First try of mobile view

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="blurb">
 				<p> &nbsp;&bull;&nbsp; Programmer &nbsp;&bull;&nbsp; <br/><!-- </p>
 				<p> --> &nbsp;&bull;&nbsp; AI Enthusiast &nbsp;&bull;&nbsp; <br/><!-- </p>
-				<p> --> &nbsp;&bull;&nbsp; Tech Afficionado &nbsp;&bull;&nbsp; </p>
+				<p> --> &nbsp;&bull;&nbsp; Tech Aficionado &nbsp;&bull;&nbsp; </p>
 			</div>
 			<div class="social">
 				<span class="box"><a class="s_label" href="https://www.facebook.com/profile.php?id=100018707857490"><span class="fa fa-facebook"></span></a></span>
@@ -86,7 +86,7 @@
 			<div class="blurb">
 				<p> &nbsp;&bull;&nbsp; Programmer &nbsp;&bull;&nbsp; <br/><!-- </p>
 				<p> --> &nbsp;&bull;&nbsp; AI Enthusiast &nbsp;&bull;&nbsp; <br/><!-- </p>
-				<p> --> &nbsp;&bull;&nbsp; Tech Afficionado &nbsp;&bull;&nbsp; </p>
+				<p> --> &nbsp;&bull;&nbsp; Tech Aficionado &nbsp;&bull;&nbsp; </p>
 			</div>
 			<div class="social">
 				<span class="box"><a class="s_label" href="https://www.facebook.com/profile.php?id=100018707857490"><span class="fa fa-facebook"></span></a></span>
