Modify mobile view slightly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-	<div class="desktop">
+	<div class="mobile_device_480px">
 		<div class="topbar">
 			<div class="items">
 				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li">Resumé</div></a>
@@ -69,7 +69,7 @@
 			</div>
 		</div>
     </div>
-    <div class="mobile_device_480px">
+    <div class="desktop">
         <!-- content and some markups for mobile -->
         <div class="topbar">
 			<div class="items">
@@ -84,9 +84,9 @@
 				<h1>Kumar</h1>
 			</div>
 			<div class="blurb">
-				<p> &nbsp;&bull;&nbsp; Programmer &nbsp;&bull;&nbsp; <br/><!-- </p>
-				<p> --> &nbsp;&bull;&nbsp; AI Enthusiast &nbsp;&bull;&nbsp; <br/><!-- </p>
-				<p> --> &nbsp;&bull;&nbsp; Tech Aficionado &nbsp;&bull;&nbsp; </p>
+				<p> &nbsp;&bull;&nbsp; Programmer &nbsp;&bull;&nbsp; </p>
+				<p> &nbsp;&bull;&nbsp; AI Enthusiast &nbsp;&bull;&nbsp; </p>
+				<p> &nbsp;&bull;&nbsp; Tech Aficionado &nbsp;&bull;&nbsp; </p>
 			</div>
 			<div class="social">
 				<span class="box"><a class="s_label" href="https://www.facebook.com/profile.php?id=100018707857490"><span class="fa fa-facebook"></span></a></span>
