Add projects page

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 
 </head>
 <body>
-	<div class="desktop">
+	<div class="desktop" id="body">
 		<div class="topbar">
-			<div class="items">
-				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li">Resumé</div></a>
+			<div class="items_left">
+				<a href="projects/projects.html" target="_self"><div class="li_left">Projects</div></a>
+			</div>
+			<div class="items_right">
+				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li_right">Resumé</div></a>
 			</div>
 		</div>
 		<div class="content">
@@ -39,12 +42,23 @@
 				<span class="box"><a class="s_label" href="https://www.linkedin.com/in/pranav-k-466615105/"><span class="fa fa-linkedin"></span></a></span>
 			</div>
 		</div>
+		<!-- <div class="bottombar">
+			<div class="items_left">
+				<input id="toggle_theme" type="checkbox">
+				<label for="toggle_theme">
+					<span class="box_left"><a class="s_label_left" ><span class="fa fa-moon-o fa-lg fa_left"></span></a></span>
+				</label>
+			</div>
+		</div> -->
 	</div>
-	<div class="mobile_device_380px">
+	<div class="mobile_device_380px" id="body">
         <!-- content and some markups for mobile -->
 		<div class="topbar">
-			<div class="items">
-				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li">Resumé</div></a>
+			<div class="items_left">
+				<a href="projects/projects.html" target="_self"><div class="li_left">Projects</div></a>
+			</div>
+			<div class="items_right">
+				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li_right">Resumé</div></a>
 			</div>
 		</div>
 		<div class="content">
@@ -69,11 +83,14 @@
 			</div>
 		</div>
     </div>
-    <div class="mobile_device_480px">
+    <div class="mobile_device_480px" id="body">
         <!-- content and some markups for mobile -->
         <div class="topbar">
-			<div class="items">
-				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li">Resumé</div></a>
+        	<div class="items_left">
+				<a href="projects/projects.html" target="_self"><div class="li_left">Projects</div></a>
+			</div>
+			<div class="items_right">
+				<a href="/Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li_right">Resumé</div></a>
 			</div>
 		</div>
 		<div class="content">
