Add mobile view for projects

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -78,5 +78,145 @@
 			</div>
 		</div> -->
 	</div>
+	<div class="mobile_device_380px">
+		<div class="topbar">
+			<div class="items_left">
+				<a href="../index.html" target="_self"><div class="li_left">Home</div></a>
+			</div>
+			<div class="items_right">
+				<a href="../Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li_right">Resumé</div></a>
+			</div>
+		</div>
+		<div class="content">
+			<div class="name">
+				<h1>Projects</h1>
+			</div>
+			<br>
+			<div class="list_of_projects">
+				<hr>
+				<div class="RoboBuggy">
+					<input id="toggle_buggy" type="checkbox">
+					<label for="toggle_buggy"><p>RoboBuggy</p></label>
+					<div class="desc" id="RoboBuggy_desc">
+						<p>Buggy (also called Sweepstakes) is a race held annually since 1920 at Carnegie Mellon. Teams of 5 athletes (the pushers) push an un-motorized vehicle (a buggy) containing a driver around a 0.84 mile course in a relay format where the vehicle serves as the baton. Roughly half of the course is uphill, during which the pushers run and shove the buggy uphill. During the other - downhill - half, drivers are on their own to navigate tight turns at speeds of up to 35mph.</p>
+						
+						<img src=RoboBuggy.jpg desc="Transistor, the current autonomous buggy" height=400px width=400px />
+
+						<p>RoboBuggy is an attempt to make an autonomous buggy, with no driver. As a member of the Software Infrastructure team, I work in ROS, C++, and Python to build the buggy's software system. <br><br>Personally, I have: <br>
+
+						- Created a ROS node to send the buggy's real-time telemetry information to a web server. Also worked on decreasing packet size to save data.<br>
+
+						- Designed a PCB connected to a button which is used to start and stop the entire ROS system. This gets rid of the previous need to SSH into the onboard Jetson and simplifies the process of starting up the autonomous system as well as the logging program down to one single press.<br>
+
+						I am also a software representative; I am authorized to start and manage the software system during practice rolls and responsible for fixing any software flaws that arise during a roll ASAP.<br>
+
+						<br>For more information, see <a href="https://github.com/CMU-Robotics-Club/RoboBuggy" class="link">here.</a>
+					</p>
+					</div>
+				</div>
+				<hr>
+				<div class="UglyDuckling">
+					<input id="toggle_ugly" type="checkbox">
+					<label for="toggle_ugly"><p>Ugly Duckling</p></label>
+					<div class="desc" id="UglyDuckling_desc">
+						<p>HackCMU is Carnegie Mellon University's premier beginner hackathon, designed to provide a platform for budding hackers. I participated in my first hackathon at HackCMU 2017, and my team created the Ugly Duckling.</p>
+
+						<p>The Ugly Duckling is an autonomous robotic camera operator that uses facial recognition to follow a chosen subject and record their actions real time, acting as a substitute for a human cameraman. Using a technique known as Histogram of Oriented Gradients (HoG), the robot tracks the subject (images of which have been fed previously as training data). Based on the position of the detected face, the robot turns in the necessary direction, centering the subject in the middle third.</p>
+
+						<img src=UglyDuckling.jpg desc="The Ugly Duckling" height=40% width=40% />
+
+						<p>Our project, which was built from scratch in under 24 hours, won the <b>"Best Use of Machine Learning" Award presented by Google.</b> We also presented this at the student exhibition during Carnegie Mellon University's 50th anniversary celebration, and won the <b>$1000 grand prize</b> in the "I Built Something" category.
+
+						<br> For more information, and to see the robot in action, see <a href="https://devpost.com/software/ugly-duckling" class="link">here.</a></p>
+					</div>
+				</div>
+				<hr>
+				<div class="Multi-Robot">
+					<input id="toggle_multi" type="checkbox">
+					<label for="toggle_multi"><p>Multi-Robot Path Optimization</p></label>
+					<div class="desc" id="Multi-Robot_desc">
+						<p>Coming Soon</p>
+					</div>
+				</div>
+				<hr>
+				<br>
+			</div>
+		</div>
+		<!-- <div class="bottombar">
+			<div class="items_left">
+				<span class="box"><a class="s_label" ><span class="fa fa-moon-o fa-lg"></span></a></span>
+			</div>
+		</div> -->
+	</div>
+	<div class="mobile_device_480px">
+		<div class="topbar">
+			<div class="items_left">
+				<a href="../index.html" target="_self"><div class="li_left">Home</div></a>
+			</div>
+			<div class="items_right">
+				<a href="../Pranav_Kumar_CMU_Resume.pdf" target="_blank"><div class="li_right">Resumé</div></a>
+			</div>
+		</div>
+		<div class="content">
+			<div class="name">
+				<h1>Projects</h1>
+			</div>
+			<br>
+			<div class="list_of_projects">
+				<hr>
+				<div class="RoboBuggy">
+					<input id="toggle_buggy" type="checkbox">
+					<label for="toggle_buggy"><p>RoboBuggy</p></label>
+					<div class="desc" id="RoboBuggy_desc">
+						<p>Buggy (also called Sweepstakes) is a race held annually since 1920 at Carnegie Mellon. Teams of 5 athletes (the pushers) push an un-motorized vehicle (a buggy) containing a driver around a 0.84 mile course in a relay format where the vehicle serves as the baton. Roughly half of the course is uphill, during which the pushers run and shove the buggy uphill. During the other - downhill - half, drivers are on their own to navigate tight turns at speeds of up to 35mph.</p>
+						
+						<img src=RoboBuggy.jpg desc="Transistor, the current autonomous buggy" height=400px width=400px />
+
+						<p>RoboBuggy is an attempt to make an autonomous buggy, with no driver. As a member of the Software Infrastructure team, I work in ROS, C++, and Python to build the buggy's software system. <br><br>Personally, I have: <br>
+
+						- Created a ROS node to send the buggy's real-time telemetry information to a web server. Also worked on decreasing packet size to save data.<br>
+
+						- Designed a PCB connected to a button which is used to start and stop the entire ROS system. This gets rid of the previous need to SSH into the onboard Jetson and simplifies the process of starting up the autonomous system as well as the logging program down to one single press.<br>
+
+						I am also a software representative; I am authorized to start and manage the software system during practice rolls and responsible for fixing any software flaws that arise during a roll ASAP.<br>
+
+						<br>For more information, see <a href="https://github.com/CMU-Robotics-Club/RoboBuggy" class="link">here.</a>
+					</p>
+					</div>
+				</div>
+				<hr>
+				<div class="UglyDuckling">
+					<input id="toggle_ugly" type="checkbox">
+					<label for="toggle_ugly"><p>Ugly Duckling</p></label>
+					<div class="desc" id="UglyDuckling_desc">
+						<p>HackCMU is Carnegie Mellon University's premier beginner hackathon, designed to provide a platform for budding hackers. I participated in my first hackathon at HackCMU 2017, and my team created the Ugly Duckling.</p>
+
+						<p>The Ugly Duckling is an autonomous robotic camera operator that uses facial recognition to follow a chosen subject and record their actions real time, acting as a substitute for a human cameraman. Using a technique known as Histogram of Oriented Gradients (HoG), the robot tracks the subject (images of which have been fed previously as training data). Based on the position of the detected face, the robot turns in the necessary direction, centering the subject in the middle third.</p>
+
+						<img src=UglyDuckling.jpg desc="The Ugly Duckling" height=40% width=40% />
+
+						<p>Our project, which was built from scratch in under 24 hours, won the <b>"Best Use of Machine Learning" Award presented by Google.</b> We also presented this at the student exhibition during Carnegie Mellon University's 50th anniversary celebration, and won the <b>$1000 grand prize</b> in the "I Built Something" category.
+
+						<br> For more information, and to see the robot in action, see <a href="https://devpost.com/software/ugly-duckling" class="link">here.</a></p>
+					</div>
+				</div>
+				<hr>
+				<div class="Multi-Robot">
+					<input id="toggle_multi" type="checkbox">
+					<label for="toggle_multi"><p>Multi-Robot Path Optimization</p></label>
+					<div class="desc" id="Multi-Robot_desc">
+						<p>Coming Soon</p>
+					</div>
+				</div>
+				<hr>
+				<br>
+			</div>
+		</div>
+		<!-- <div class="bottombar">
+			<div class="items_left">
+				<span class="box"><a class="s_label" ><span class="fa fa-moon-o fa-lg"></span></a></span>
+			</div>
+		</div> -->
+	</div>
 </body>
 </html>
